--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sum of two Numbers equal target</title>
 </head>
 <body>
-    <h1>Given an array f integers numms and an integer target, return indices of the two numbers such that they add up to target. </h1>
+    <h1>Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target. </h1>
     <script>
         let n = prompt("Enter Size of array: ");
         let arr = [];
@@ -36,7 +36,7 @@
                 map.set(arr[i],i);
             }
         }
-        document.write(`[ ${result[0]}, ${result[1]} ]`);
+        document.write(`Answer:[ ${result[0]}, ${result[1]} ]`);
     </script>
 </body>
 </html>
